tests/compile_fail/unsized.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized.rs:14:5
   |
14 |     project!(Foo, cell.quax)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   | 
  ::: $WORKSPACE/src/macros.rs:7:44
   |
7  | pub unsafe fn project_unchecked<T: ?Sized, F>(
   |                                            - required by this bound in `cell_project::macros::project_unchecked`
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
